[Go] Implement delete user handler.
