# openapi/openapi.yml
@@ -20,7 +20,16 @@ paths:
   /api/users/{id}/posts:
     $ref: ./paths/user_posts.yml
   /api/users/{userID}:
-    $ref: ./paths/find_user_by_id.yml
+    parameters:
+      - in: path
+        name: userID
+        required: true
+        schema:
+          type: string
+    get:
+      $ref: ./paths/find_user_by_id.yml
+    delete:
+      $ref: ./paths/delete_users.yml
   /api/login:
     $ref: ./paths/login.yml
 
@@ -44,6 +53,8 @@ components:
       $ref: ./components/responses/create_quote_repost_response.yml
     DeleteRepostRequest:
       $ref: ./components/requests/delete_repost_request.yml
+    DeleteUserRequest:
+      $ref: ./components/requests/delete_user_request.yml
     GetReverseChronologicalHomeTimelineResponse:
       $ref: ./components/responses/get_reverse_chronological_home_timeline_response.yml
     GetReverseChronologicalHomeTimelineExample:
